--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ beautifulsoup4>=4.12.0
 requests>=2.31.0
 pandas>=2.0.0
 numpy>=1.24.0
+google-genai==1.19.0
+langchain==0.3.25
+langchain-core==0.3.64
+langchain-community==0.3.24
+langchain-google-genai==2.1.5
+langchain-google-community==2.0.7
