--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,10 @@ langchain-core==0.3.64
 langchain-community==0.3.24
 langchain-google-genai==2.1.5
 langchain-google-community==2.0.7
+
+# Email functionality
+email-validator>=2.0.0  # For email validation
+html2text>=2020.1.16   # For email text conversion (optional)
+
+# Additional utilities
+psutil>=5.9.0  # For system information logging
