--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
+
+[tool.ruff]
+line-length = 100
+select = ["F", "I"]
+ignore = ["E501", "E712", ]
